Bug 86963 - Error to save document content.xml - when saving .odt
Summary: Error to save document content.xml - when saving .odt
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.beta1
Hardware: All All
: high major
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.5.0 target:4.4.0.2
Keywords: bisected, regression
: 60769 86927 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-12-03 08:18 UTC by Roman Kuznetsov
Modified: 2024-06-06 05:23 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot error (21.29 KB, image/png)
2014-12-03 08:18 UTC, Roman Kuznetsov
Details
document (1.22 MB, application/vnd.oasis.opendocument.text)
2014-12-03 08:20 UTC, Roman Kuznetsov
Details
console logs (9.07 KB, text/plain)
2014-12-03 22:05 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2014-12-03 08:18:11 UTC
Created attachment 110396 [details]
screenshot error

When saving a document Writer, Libreoffice (locale RU) an error "Error to save the document. Error save. Error to save document content.xml"

In this document is not saved

ID build: 8bb5328562ef32c39ca408c8cb506bb5bb081864
Comment 1 Roman Kuznetsov 2014-12-03 08:20:52 UTC
Created attachment 110397 [details]
document
Comment 2 Julien Nabet 2014-12-03 22:05:56 UTC
Created attachment 110426 [details]
console logs

On pc Debian x86-64 with master sources updated today, I could reproduce this.

I attached console logs during saving.
Comment 3 Julien Nabet 2014-12-03 22:07:14 UTC
I tested the doc with http://odf-validator.rhcloud.com/, it was ok with ODF 1.2, extended conforming.
Comment 4 Julien Nabet 2014-12-03 22:08:40 UTC
I don't reproduce this with LO Debian package 4.3.3 => regression
Comment 5 Julien Nabet 2014-12-03 22:11:30 UTC
I don't reproduce this either with 4.3 sources updated about 1 week ago,
commit ec8beb2fa279b8d7b1efbd9f5414895b17dfbe8b
Author: Katarina Behrens <bubli@bubli.org>
Date:   Fri Sep 5 14:11:15 2014 +0200
Comment 6 Roman Kuznetsov 2014-12-04 05:24:23 UTC
(In reply to Julien Nabet from comment #4)
> I don't reproduce this with LO Debian package 4.3.3 => regression

yes, LO 4.3.5.1, windows 7 x86_64, file is saved
Comment 7 Michael Stahl 2014-12-04 22:30:35 UTC
regression from:

commit 01fc08c0b5c57fef8ad3755672f4266d85e849a5
Author:     Miklos Vajna <vmiklos@collabora.co.uk>
AuthorDate: Thu Nov 20 16:44:21 2014 +0100

    fdo#85554 SwXShape: fix getting ZOrder property when doc contains TextBoxes
Comment 8 Jacques Guilleron 2014-12-09 14:15:45 UTC
*** Bug 86927 has been marked as a duplicate of this bug. ***
Comment 9 Roman Kuznetsov 2014-12-19 16:37:23 UTC
save file error in LO 4.4.0.1 
id build: 1ba9640ddd424f1f535c75bf2b86703770b8cf6f
windows 7 x86-64
Comment 10 Miklos Vajna 2014-12-19 17:35:17 UTC
Yes, I can reproduce, looking into this.
Comment 11 Commit Notification 2014-12-19 21:55:34 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=97952280f0adbe195e6a2e0bab8a21a7e352a721

fdo#86963 SwXShape: don't ask SwTextBoxHelper for ZOrder of child shapes

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Miklos Vajna 2014-12-20 10:41:02 UTC
libreoffice-4-4 review: https://gerrit.libreoffice.org/13562
Comment 13 Commit Notification 2015-01-07 15:50:42 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6227d2fc60564f847a2ffd0b5f5d0fbf8ab49f5b&h=libreoffice-4-4

fdo#86963 SwXShape: don't ask SwTextBoxHelper for ZOrder of child shapes

It will be available in 4.4.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Michael Stahl 2015-01-09 19:40:32 UTC
*** Bug 72129 has been marked as a duplicate of this bug. ***
Comment 15 Cor Nouws 2018-11-21 14:52:06 UTC
*** Bug 60769 has been marked as a duplicate of this bug. ***