fdo#86963 SwXShape: don't ask SwTextBoxHelper for ZOrder of child shapes

Regression from commit 01fc08c0b5c57fef8ad3755672f4266d85e849a5
(fdo#85554 SwXShape: fix getting ZOrder property when doc contains
TextBoxes, 2014-11-20), the problem was that we returned wrong ZOrder of
shapes inside group shapes.

In SwXShape::getPropertyValue(), pObj points to the Writer-interfacing
outermost group shape in case of shapes contained by group shapes, while
GetSvxShape() gives access to the real shape. Given that TextBoxes are
only possible at the highest level (and not inside group shapes), just
check if the two pointers are the same: when not, then no need to
convert anything.

With this, child shapes get back their original ZOrder -- before in case
the group shape had ZOrder=0, all its child shapes had ZOrder=0 as well.

(cherry picked from commit 97952280f0adbe195e6a2e0bab8a21a7e352a721)

Conflicts:
	sw/qa/extras/odfexport/odfexport.cxx

Change-Id: I9c4097154130cd04f6ab2f2082abafc1d4333872
Reviewed-on: https://gerrit.libreoffice.org/13562
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>